@@ -1,3 +1,11 @@
+2012-12-11  Pierre Muller  <muller@ics.u-strasbg.fr>
+
+	Incorporate ARI web page generator into gdb_7_5-branch.
+	* contrib/ari/create-web-ari-in-src.sh: New file.
+	* contrib/ari/gdb_ari.sh: New file.
+	* contrib/ari/gdb_find.sh: New file.
+	* contrib/ari/update-web-ari.sh: New file.
+
 2012-11-29  Joel Brobecker  <brobecker@adacore.com>
 
 	* version.in: Set version to 7.5.1.20121129-cvs.
